--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ body {
 
     .nav-menu {
         width: 100%;
-        max-height: 70px; 
+        max-height: 55px; 
     }
 
     .nav-menu ul {
@@ -231,9 +231,9 @@ body {
 }
 
 /* 🔹 Para los submenús de los últimos elementos */
-.nav-menu ul li:last-child .submenu {
-    right: 0;   /* alinéalo con el borde derecho del li */
-    left: auto; /* anula el alineado por defecto */
+.nav-menu ul li:nth-last-child(-n+2) .submenu {
+    right: 0;
+    left: auto;
 }
 
 
