--- a/calculadora.css
+++ b/calculadora.css
@@ -1,5 +1,6 @@
+
 body {
-  background: #ECF0F1;
+  background: #000000;
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
