--- a/calculadora.css
+++ b/calculadora.css
@@ -11,7 +11,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: #ECF0F1; /* Igual que .calculadora */
+  background: #9a9a9a00; /* Igual que .calculadora */
   font-family: 'Segoe UI', Arial, sans-serif;
 }
 
