--- a/calculadora.css
+++ b/calculadora.css
@@ -23,13 +23,13 @@ body {
 
 /* === CALCULADORA COMO APP === */
 .calculadora {
-  background: #ECF0F1;
+  background: #ecf0f100;
   border-radius: 0; /* Sin bordes en modo app */
   width: 100%;
-  max-width: 380px;
-  height: 100vh;
-  max-height: 720px;
-  padding: 16px;
+  max-width: 370px;
+  height: 85vh;
+  max-height: 770px;
+  padding: 10px;
   box-shadow: none;
   display: flex;
   flex-direction: column;
